--- a/analysis/scratch/040325_e0026/040325-HP_initial_analysis.Rmd
+++ b/analysis/scratch/040325_e0026/040325-HP_initial_analysis.Rmd
@@ -32,14 +32,22 @@ e0026 <- filter(household_data, str_detect(household_data$sample, "e0026")) %>%
 select(sample, biosample1, experiment, passage, OTU, count, replicate, relAbundance, Phylum, Family, Genus)
 
 
+# List the antibiotic-taking subjects.
+# Based on metagenomic and metabolomic data, annotate XHB as antibiotic-taking
+# and XHC as a control subject.
+subjectsAbx <- c("XAA","XBA","XCA","XDA","XEA","XFA","XGA","XHB","XIA","XJA",
+                 "XKA","XLA","XMA","XNA","XOA","XPA","XQA","XRA","XSA","XTA",
+                 "XUA","XVA")
+
 # Extract subject, day, household, and antibiotic information
 e0026_clean <- e0026 %>%
   mutate(
     subject = str_sub(biosample1, 1, -5),
     day = str_sub(biosample1, -3),
     household = str_sub(biosample1, 1, -6),
-    antibiotic = if_else(str_sub(biosample1, 3, 3) == "A", 1, 0)
+    antibiotic = if_else(str_sub(biosample1, 1, -5) %in% subjectsAbx, 1, 0)
   )
+
 
 # Divide up e0026 dataset into separate day datasets
 e0026_day1 <- e0026_clean %>%  filter(str_detect(biosample1, "001") | str_detect(biosample1, "002") | str_detect(biosample1, "003") | str_detect(biosample1, "022")| str_detect(biosample1, "008")) %>% 
@@ -74,6 +82,14 @@ my_colors <- readRDS("C:/Spring-Rotation-2025/scratch/familyColorPalette.rds")
 
 ```
 
+```{r}
+
+
+source("C:/abx-response-invitro/analysis/scratch/040325-loadData/loadData.R")
+source("C:/abx-response-invitro/analysis/scratch/040325-plotCompositions/040325-plotCompositions.R")
+
+
+```
 
 
 ### Compositional changes across passages
