--- a/analysis/scratch/040325_e0026/040325-HP_initial_analysis.Rmd
+++ b/analysis/scratch/040325_e0026/040325-HP_initial_analysis.Rmd
@@ -87,6 +87,9 @@ my_colors <- readRDS("C:/Spring-Rotation-2025/scratch/familyColorPalette.rds")
 
 source("C:/abx-response-invitro/analysis/scratch/040325-loadData/loadData.R")
 source("C:/abx-response-invitro/analysis/scratch/040325-plotCompositions/040325-plotCompositions.R")
+source("C:/abx-response-invitro/analysis/scratch/040325-comparePrePostAbx/040325-comparePrePostAbx.R")
+source("C:/abx-response-invitro/analysis/scratch/040325-compareP0P8/040325-compareP0P8.R")
+source("C:/abx-response-invitro/analysis/scratch/040325-compareStudyDays/040325-compareStudyDays.R")
 
 
 ```
